# dotfiles-nixos

./: apply-system.sh  apply-users.sh  flake.nix  notes.md
config/f3r10-taffybar/: f3r10-taffybar.cabal  flake.nix  taffybar.hs
config/xmobar/: xmobarrc2
config/xmonad/: f3r10-xmonad.cabal  flake.nix  xmonad.hs
modules/: code.nix
modules/alacritty/: default.nix
modules/shell/: fish.nix  fzf.nix  starship.nix  tmux-sessionizer  tmux.nix
modules/theme/: colors.nix
modules/window-managers/: xmonad.nix
overlays/: default.nix  taffybar.nix
system/: configuration.nix  hardware-configuration.nix
system/wm/: xmonad.nix
users/f3r10/: home.nix
users/f3r10/programs/: default.nix
users/f3r10/programs/nvim/: nvim.nix
users/f3r10/programs/nvim/lua/: init.lua
users/f3r10/programs/nvim/lua/lua/: autocommands.lua  format.lua  init.lua  mappings.lua  options.lua
users/f3r10/programs/nvim/lua/lua/f3r10/: appearance.lua  cmp.lua  functions.lua  lsp.lua  plugins.lua  telescope.lua
users/f3r10/programs/nvim/lua/lua/languages/: css.lua  elm.lua  javascript.lua  lsp.lua  lua.lua  rust.lua  scala.lua  svelte.lua
users/f3r10/programs/nvim/lua/lua/lsp/: efm.lua  null-ls.lua  tailwindcss.lua
users/f3r10/programs/nvim/lua/lua/setup/: autopairs.lua  blankline.lua  cmp.lua  gitsigns.lua  rust_tools.lua  treesitter.lua
users/f3r10/programs/xmonad/: config.hs  default.nix
